Ensure footer doesn't overlap content on small mobile screens

--- a/css/site.scss
+++ b/css/site.scss
@@ -11,7 +11,7 @@ html {
 }
 
 body {
-    padding-bottom: 360px;
+    padding-bottom: 400px;
 }
 
 footer {
